--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -63,3 +63,10 @@
   height: 0.375rem !important;
   border-radius: 0.5rem !important;
 }
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: var(--first-color) !important; /* Màu của nút bấm */
+  transform: translateY(-100%);
+}
+
