--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --first-color: hsl(353, 100%, 65%);
   --title-color: hsl(244, 24%, 26%);
   --text-color: hsl(244, 16%, 43%);
+  --small-text-color: #42128f;
+  --subtitle-color: #8b88b1;
   --body-color: #fcf6f1;
   --container-color: #fff;
 
