--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -43,7 +43,7 @@
 }
 
 .timeline__date {
-    color: #8b88b1;
+    color: var(--subtitle-color);
     font-size: var(--small-font-size);
 }
 
@@ -53,10 +53,14 @@
 }
 
 .timeline__institution {
-    color: #8b88b1;
     font-size: var(--small-font-size);
     font-style: italic;
 }
+
+.timeline__institution a {
+    color: var(--small-text-color);
+}
+
 .timeline__text{
     margin-top: 0.25rem;
 }
